--- a/MvcProje/Views/Shared/_AdminLayout.cshtml
+++ b/MvcProje/Views/Shared/_AdminLayout.cshtml
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="~/AdminLTE-3.0.4/dist/css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <link href="~/AdminLTE-3.0.4/docs/assets/css/style.css" rel="stylesheet" />
 </head>
 
 <body class="hold-transition sidebar-mini">
