--- a/MvcProje/Views/AdminCategory/Index.cshtml
+++ b/MvcProje/Views/AdminCategory/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using EntityLayer.Concrete
+@model List<Category>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -9,24 +10,28 @@
 
 <table class="table table-bordered">
     <tr>
-        <th>ID</th>
-        <th>Kategori</th>
-        <th>Durum</th>
-    </tr>
-    <tr>
-
-        <th>1</th>
-        <th>Spor</th>
-        <th>Aktif</th>
-
-    </tr>
-    <tr>
-
-        <th>2</th>
-        <th>Yazılım</th>
-        <th>Aktif</th>
-
+        <th>#</th>
+        <th>Kategori Adı</th>
+        <th>Sil</th>
+        <th>Güncelle</th>
+        <th>Başlıklar</th>
     </tr>
 
+    @foreach (var item in Model)
+    {
+        <tr>
 
+            <th>@item.CatagoryID</th>
+            <td>@item.CatagoryName</td>
+            <td><a href="/AdminCategory/DeleteCategory/@item.CatagoryID" class="btn btn-danger">Sil</a></td>
+            <td><a href="/AdminCategory/EditCategory/@item.CatagoryID" class="btn btn-warning">Güncelle</a></td>
+            <td><a href="#" class="btn btn-primary">Başlıklar</a></td>
+
+        </tr>
+
+    }
+
+
+    
 </table>
+<a href="/AdminCategory/AddCategory" class="btn btn-info">Yeni Kategori</a>
